📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -1454,5 +1454,85 @@
         "published": "Mon, 08 Dec 2025 12:47:11 +0000",
         "source": "AI News",
         "summary": "<p>InTouchNow.ai is now offering doctors surgeries a piece of software designed to modernise phone answering, designed to reduce hold times and create a smoother, more responsive experience for patients and staff. In the UK, many GP (general practice) surgeries&#8217; phone lines are tied up in the mornings as patients try to contact their medical practitioner [&#8230;]</p>\n<p>The post <a href=\"https://www.artificialintelligence-news.com/news/medical-ai-in-the-uk-doctors-clinicians-surgeries-and"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/08/adobe-launches-content-creation-hub-in-premiere-mobile-for-youtube-shorts-creators/",
+        "title": "Adobe launches content creation hub in Premiere mobile for YouTube Shorts creators",
+        "link": "https://techcrunch.com/2025/12/08/adobe-launches-content-creation-hub-in-premiere-mobile-for-youtube-shorts-creators/",
+        "published": "Mon, 08 Dec 2025 13:45:00 +0000",
+        "source": "TechCrunch",
+        "summary": "The company says the space is designed to give creators everything they need to produce viral videos, grow their audience, and tap into trends, whether it's creating day-in-the-life vlogs, travel videos, or behind-the-scenes clips."
+    },
+    {
+        "id": "https://www.theverge.com/news/839169/segway-myon-ebike-teaser-ces-radar",
+        "title": "Segway\u2019s new Myon e-bike will straddle past and future",
+        "link": "https://www.theverge.com/news/839169/segway-myon-ebike-teaser-ces-radar",
+        "published": "2025-12-08T09:00:00-05:00",
+        "source": "The Verge",
+        "summary": "Segway\u2019s modest e-bike lineup is about to gain a new entrant. The Ninebot-owned brand, once known for its pioneering self-balancing scooters, currently only sells two e-bikes: the moto-styled Xyber and the low-step Xafari. Now it\u2019s getting a third, Myon, which it plans on officially debuting at the Consumer Electronics Show in Las Vegas next year. [&#8230;]"
+    },
+    {
+        "id": "https://arstechnica.com/gaming/2025/12/please-send-help-i-cant-stop-playing-these-roguelikes/",
+        "title": "Please send help. I can\u2019t stop playing these roguelikes.",
+        "link": "https://arstechnica.com/gaming/2025/12/please-send-help-i-cant-stop-playing-these-roguelikes/",
+        "published": "Mon, 08 Dec 2025 12:00:14 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "2025 was a very good year for my favorite genre."
+    },
+    {
+        "id": "https://gizmodo.com/adobe-rolls-out-free-generative-ai-for-creative-cloud-pro-users-as-a-limited-time-bonus-2000696575",
+        "title": "Adobe Rolls Out Free Generative AI for Creative Cloud Pro Users as a Limited-Time Bonus",
+        "link": "https://gizmodo.com/adobe-rolls-out-free-generative-ai-for-creative-cloud-pro-users-as-a-limited-time-bonus-2000696575",
+        "published": "Mon, 08 Dec 2025 13:55:43 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Adobe Creative Cloud\" class=\"attachment-full size-full wp-post-image\" height=\"997\" src=\"https://gizmodo.com/app/uploads/2025/12/Adobe.jpeg\" width=\"1500\" /><br /><br />Over 20 AI-enhanced apps and tools, including unlimited Firefly and 3rd-party image generations, make Adobe the industry leader."
+    },
+    {
+        "id": "https://gizmodo.com/sebastian-stan-avengers-doomsday-deaths-marvel-mcu-2000696550",
+        "title": "Sebastian Stan Teases That Not Everyone Will Make It Out of \u2018Avengers: Doomsday\u2019",
+        "link": "https://gizmodo.com/sebastian-stan-avengers-doomsday-deaths-marvel-mcu-2000696550",
+        "published": "Mon, 08 Dec 2025 13:00:29 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Ms 1208 Bucky Thunderbolts\" class=\"attachment-full size-full wp-post-image\" height=\"1280\" src=\"https://gizmodo.com/app/uploads/2025/12/MS-1208-bucky-thunderbolts.jpg\" width=\"1920\" /><br /><br />Plus, Gillian Anderson denies any involvement in the upcoming 'X-Files' reboot."
+    },
+    {
+        "id": "https://www.zdnet.com/article/this-new-linux-platform-will-let-you-update-your-next-car-at-home-as-soon-as-2027/",
+        "title": "This new Linux platform will let you update your next car at home - as soon as 2027",
+        "link": "https://www.zdnet.com/article/this-new-linux-platform-will-let-you-update-your-next-car-at-home-as-soon-as-2027/",
+        "published": "Mon, 08 Dec 2025 13:32:00 GMT",
+        "source": "Latest news",
+        "summary": "Toyota, Honda, and Mazda are building a new open-source car platform that runs everything from entertainment to navigation - and could even power self-driving."
+    },
+    {
+        "id": "https://office365itpros.com/2025/12/08/microsoft-365-pricing-increase/",
+        "title": "Microsoft Increases Office 365 and Microsoft 365 License Prices",
+        "link": "https://office365itpros.com/2025/12/08/microsoft-365-pricing-increase/",
+        "published": "Mon, 08 Dec 2025 13:49:21 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46192186\">Comments</a>"
+    },
+    {
+        "id": "https://github.com/apple/foundationdb/tree/main/flow",
+        "title": "Flow: Actor-based language for C++, used by FoundationDB",
+        "link": "https://github.com/apple/foundationdb/tree/main/flow",
+        "published": "Mon, 08 Dec 2025 13:08:38 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46191763\">Comments</a>"
+    },
+    {
+        "id": "https://www.off-policy.com/alignment-is-capability/",
+        "title": "Alignment Is Capability",
+        "link": "https://www.off-policy.com/alignment-is-capability/",
+        "published": "Mon, 08 Dec 2025 13:23:29 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46191933\">Comments</a>"
+    },
+    {
+        "id": "https://www.technologyreview.com/2025/12/08/1128982/the-download-four-still-big-breakthroughs-and-how-our-bodies-fare-in-extreme-heat/",
+        "title": "The Download: four (still) big breakthroughs, and how our bodies fare in extreme heat",
+        "link": "https://www.technologyreview.com/2025/12/08/1128982/the-download-four-still-big-breakthroughs-and-how-our-bodies-fare-in-extreme-heat/",
+        "published": "Mon, 08 Dec 2025 13:14:00 +0000",
+        "source": "MIT Technology Review",
+        "summary": "This is today&#8217;s edition of&#160;The Download,&#160;our weekday newsletter that provides a daily dose of what&#8217;s going on in the world of technology. 4 technologies that didn\u2019t make our 2026 breakthroughs list If you\u2019re a longtime reader, you probably know that our newsroom selects 10 breakthroughs every year that we think&#160;will define the future. This group&#8230;"
     }
 ]
