📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -1686,5 +1686,189 @@
         "published": "Mon, 08 Dec 2025 14:00:00 +0000",
         "source": "AI News",
         "summary": "<p>Resemble AI has raised US$13 million in a new strategic investment round for AI deepfake detection. The funding brings its total venture investment to US$25 million, with participation from Berkeley CalFund, Berkeley Frontier Fund, Comcast Ventures, Craft Ventures, Gentree, Google&#8217;s AI Futures Fund, IAG Capital Partners, and others. The funding comes as organisations are under [&#8230;]</p>\n<p>The post <a href=\"https://www.artificialintelligence-news.com/news/google-sony-and-okta-back-r"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/08/one-rule-trump-says-hell-sign-an-executive-order-blocking-state-ai-laws-despite-bipartisan-pushback/",
+        "title": "\u2018ONE RULE\u2019: Trump says he\u2019ll sign an executive order blocking state AI laws despite bipartisan pushback",
+        "link": "https://techcrunch.com/2025/12/08/one-rule-trump-says-hell-sign-an-executive-order-blocking-state-ai-laws-despite-bipartisan-pushback/",
+        "published": "Mon, 08 Dec 2025 16:07:39 +0000",
+        "source": "TechCrunch",
+        "summary": "\u201cI will be doing a ONE RULE Executive Order this week,\u201d Trump posted on social media. \u201cYou can\u2019t expect a company to get 50 Approvals every time they want to do something.\u201d"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/08/paramount-goes-to-war-with-netflix-for-warner-bros-discovery-with-hostile-108-4b-bid/",
+        "title": "Paramount goes to war with Netflix for Warner Bros. Discovery with hostile $108.4B bid",
+        "link": "https://techcrunch.com/2025/12/08/paramount-goes-to-war-with-netflix-for-warner-bros-discovery-with-hostile-108-4b-bid/",
+        "published": "Mon, 08 Dec 2025 15:15:08 +0000",
+        "source": "TechCrunch",
+        "summary": "Paramount Skydance on Monday launched a hostile, $108.4 billion bid to buy Warner Bros. Discovery, days after Warner Bros. agreed to be acquired by Netflix for $82.7 billion."
+    },
+    {
+        "id": "https://www.theverge.com/news/839927/meta-facebook-instagram-eu-ad-model-choice",
+        "title": "Facebook and Instagram will let European users see fewer personal ads",
+        "link": "https://www.theverge.com/news/839927/meta-facebook-instagram-eu-ad-model-choice",
+        "published": "2025-12-08T11:12:58-05:00",
+        "source": "The Verge",
+        "summary": "Meta will soon give Instagram and Facebook users in the European Union the option to limit personalised ads, in an effort to comply with the bloc's tech rules. The European Commission announced that the new advertising options will be rolled out in January 2026, and that this is \"the first time that such a choice [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/bulletin/839889/the-verge-subscription-turns-one",
+        "title": "The Verge subscription turns one",
+        "link": "https://www.theverge.com/bulletin/839889/the-verge-subscription-turns-one",
+        "published": "2025-12-08T11:00:00-05:00",
+        "source": "The Verge",
+        "summary": "We're one year into the experiment of running The Verge with subscriptions, and so far things are going quite well - but we've heard a lot of feedback so far, and we've got some exciting changes in store to try and make this thing even better. We hit our subscriber goals for 2025, and an [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/gadgets/839820/genki-moonbase-apple-watch-ultra-2-rtx-5070-deal-sale",
+        "title": "Genki\u2019s colorful, powerful power strip is 25 percent off",
+        "link": "https://www.theverge.com/gadgets/839820/genki-moonbase-apple-watch-ultra-2-rtx-5070-deal-sale",
+        "published": "2025-12-08T10:47:57-05:00",
+        "source": "The Verge",
+        "summary": "Power strips are generally pretty boring. You plug stuff into them, then you try your best to hide the strip along with all of the cables feeding into it. But Genki\u2019s Moonbase is meant to be displayed loud and proud on your desk. The retrofuturism-inspired strip we wrote about at the end of last year [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/news/839882/openai-chatgpt-ads-app-promo-messages-turned-off",
+        "title": "OpenAI says it\u2019s disabled ad-like app promotions in ChatGPT",
+        "link": "https://www.theverge.com/news/839882/openai-chatgpt-ads-app-promo-messages-turned-off",
+        "published": "2025-12-08T10:21:21-05:00",
+        "source": "The Verge",
+        "summary": "OpenAI has turned off some promotional app messages in ChatGPT after users complained that the chatbot was showing them ads. In a post on X, OpenAI's chief research officer, Mark Chen, said that the company is working to improve the experience after showing ChatGPT users in-app messages promoting companies like Peloton and Target, and that [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/news/839879/the-boys-season-five-trailer-release-date-jason-padalecki",
+        "title": "The Boys is returning for its final season in April",
+        "link": "https://www.theverge.com/news/839879/the-boys-season-five-trailer-release-date-jason-padalecki",
+        "published": "2025-12-08T10:16:16-05:00",
+        "source": "The Verge",
+        "summary": "The Boys' fifth and final season is headed to Amazon Prime Video on April 8th, 2026. In addition to a release date, Prime Video revealed the trailer for season five during CCXP in Brazil, offering a look at the reunion between Supernatural costars Jared Padalecki and Jensen Ackles, as reported earlier by Variety. The Boys [&#8230;]"
+    },
+    {
+        "id": "https://arstechnica.com/cars/2025/12/lectric-xpress-750-a-full-sized-bike-for-the-budget-minded/",
+        "title": "Lectric XPress 750:  A full-sized bike for the budget-minded",
+        "link": "https://arstechnica.com/cars/2025/12/lectric-xpress-750-a-full-sized-bike-for-the-budget-minded/",
+        "published": "Mon, 08 Dec 2025 15:49:32 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "A budget e-bike that offers more than you might expect."
+    },
+    {
+        "id": "https://arstechnica.com/information-technology/2025/12/meta-offers-eu-users-ad-light-option-in-push-to-end-investigation/",
+        "title": "Meta offers EU users ad-light option in push to end investigation",
+        "link": "https://arstechnica.com/information-technology/2025/12/meta-offers-eu-users-ad-light-option-in-push-to-end-investigation/",
+        "published": "Mon, 08 Dec 2025 14:57:11 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "Facebook agrees to change \"pay or consent\" model after talks with European Commission."
+    },
+    {
+        "id": "https://www.engadget.com/computing/accessories/the-22-best-gift-ideas-for-the-remote-worker-in-your-life-140037336.html?src=rss",
+        "title": "The 22 best gift ideas for the remote worker in your life",
+        "link": "https://www.engadget.com/computing/accessories/the-22-best-gift-ideas-for-the-remote-worker-in-your-life-140037336.html?src=rss",
+        "published": "Mon, 08 Dec 2025 16:00:37 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>It\u2019s 2025, so chances are you have at least one person who works remotely on your gift list. While the work-from-home life has its perks \u2014 nobody likes a long commute \u2014 it certainly comes with its own set of challenges, from missing out on pro-level equipment to dealing with annoyances around the house. If you\u2019re looking to buy a gift for someone who spends much of their time in their home office, we\u2019ve rounded up a few techy ideas that should make their days a little more delightful \u2014 or at "
+    },
+    {
+        "id": "https://www.engadget.com/big-tech/paramount-makes-a-108-billion-hostile-takeover-bid-for-warner-bros-discovery-152248473.html?src=rss",
+        "title": "Paramount makes a $108 billion hostile takeover bid for Warner Bros. Discovery",
+        "link": "https://www.engadget.com/big-tech/paramount-makes-a-108-billion-hostile-takeover-bid-for-warner-bros-discovery-152248473.html?src=rss",
+        "published": "Mon, 08 Dec 2025 15:22:48 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Paramount has been none too pleased about <a class=\"link\" href=\"https://www.engadget.com/entertainment/streaming/the-netflix-and-warner-bros-deal-might-be-great-for-shareholders-but-not-for-anyone-else-183000247.html\" target=\"_blank\">Netflix striking an $82.7 billion deal</a> to buy much of Warner Bros. Discovery (WBD). Now, Paramount is making a hostile takeover bid for WBD. It's making its pitch directly to WBD shareholders with an all-cash offer of $30 per share that expires on January 8.<"
+    },
+    {
+        "id": "https://gizmodo.com/whos-the-worst-villain-on-it-welcome-to-derry-take-your-pick-2000695978",
+        "title": "Who\u2019s the Worst Villain on \u2018It: Welcome to Derry\u2019? Take Your Pick",
+        "link": "https://gizmodo.com/whos-the-worst-villain-on-it-welcome-to-derry-take-your-pick-2000695978",
+        "published": "Mon, 08 Dec 2025 16:00:29 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Pennywisebeaver\" class=\"attachment-full size-full wp-post-image\" height=\"1280\" src=\"https://gizmodo.com/app/uploads/2025/12/Pennywisebeaver.jpg\" width=\"1920\" /><br /><br />The penultimate episode of HBO\u2019s Stephen King series empowered all its baddies at once\u2014with devastating consequences."
+    },
+    {
+        "id": "https://gizmodo.com/xbox-is-bleeding-out-black-friday-2025-sales-2000696718",
+        "title": "Yep, Xbox Is Bleeding Out",
+        "link": "https://gizmodo.com/xbox-is-bleeding-out-black-friday-2025-sales-2000696718",
+        "published": "Mon, 08 Dec 2025 15:33:20 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Xbox Series X 1\" class=\"attachment-full size-full wp-post-image\" height=\"1280\" src=\"https://gizmodo.com/app/uploads/2025/12/Xbox-Series-X-1.jpg\" width=\"1920\" /><br /><br />Microsoft really doesn\u2019t care about consoles anymore."
+    },
+    {
+        "id": "https://gizmodo.com/paramount-warner-bros-hostile-bid-netflix-trump-2000696720",
+        "title": "Paramount Isn\u2019t Letting Netflix Get Warner Bros. Without a Fight",
+        "link": "https://gizmodo.com/paramount-warner-bros-hostile-bid-netflix-trump-2000696720",
+        "published": "Mon, 08 Dec 2025 15:00:52 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Star Trek Tng Locutus\" class=\"attachment-full size-full wp-post-image\" height=\"1280\" src=\"https://gizmodo.com/app/uploads/2025/12/star-trek-tng-locutus.jpg\" width=\"1920\" /><br /><br />Still fresh off of the completion of its own megamerger, Paramount is staging a hostile bidding war in an attempt to disrupt Netflix and Warner Bros.' takeover."
+    },
+    {
+        "id": "https://mashable.com/article/dec-8-segway-cube-1000-deal",
+        "title": "The Segway Cube 1000 portable power station is under $330 at Amazon for a limited time only",
+        "link": "https://mashable.com/article/dec-8-segway-cube-1000-deal",
+        "published": "Mon, 08 Dec 2025 15:37:36 +0000",
+        "source": "Mashable",
+        "summary": "The Segway Cube 1000 portable power station is on sale at Amazon for $329.99, down from the normal price of $999.99. That's a 66% discount."
+    },
+    {
+        "id": "https://mashable.com/article/dec-8-roborock-saros-robot-vacuum-mop-deal",
+        "title": "The Roborock Saros 10R robot vacuum-mop combo is back down to its Black Friday price",
+        "link": "https://mashable.com/article/dec-8-roborock-saros-robot-vacuum-mop-deal",
+        "published": "Mon, 08 Dec 2025 15:22:12 +0000",
+        "source": "Mashable",
+        "summary": "As of Dec. 8, you can get the Roborock Saros 10R for $999.99, down from $1,599.99, at Amazon. That's a 38% discount and $600 in savings."
+    },
+    {
+        "id": "https://mashable.com/article/golden-globes-nominations-2026",
+        "title": "Golden Globes nominations 2026: One Battle After Another and Sentimental Value lead the pack",
+        "link": "https://mashable.com/article/golden-globes-nominations-2026",
+        "published": "Mon, 08 Dec 2025 15:02:09 +0000",
+        "source": "Mashable",
+        "summary": "The nominees for the 2026 Golden Globes include \"One Battle After Another,\" \"Sinners,\" \"Sentimental Value,\" and \"Hamnet.\""
+    },
+    {
+        "id": "https://readwrite.com/soccer-chairman-tony-bloom-betting-allegations/",
+        "title": "Soccer chairman Tony Bloom hit with betting allegations, but denies claims",
+        "link": "https://readwrite.com/soccer-chairman-tony-bloom-betting-allegations/",
+        "published": "Mon, 08 Dec 2025 15:15:58 +0000",
+        "source": "ReadWrite",
+        "summary": "<div><img alt=\"Brighton &amp; Hove Albion football AMEX Stadium, green pitch on the left and chairs on the right-hand side. Soccer chairman Tony Bloom hit with betting allegations, but denies claims\" class=\"attachment-medium size-medium wp-post-image\" height=\"200\" src=\"https://readwrite.com/wp-content/uploads/2025/12/ATS-4-300x200.png\" style=\"width: 100%; height: 66.67%; margin-bottom: 15px;\" width=\"300\" /></div>\n<p>The chairman of soccer club Brighton &#38; Hove Albion, Tony Bloom, has come und"
+    },
+    {
+        "id": "https://www.zdnet.com/article/snap-vs-flatpak-how-to-decide-which-linux-package-manager-is-right-for-you/",
+        "title": "Snap vs. Flatpak: How to decide which Linux package manager is right for you",
+        "link": "https://www.zdnet.com/article/snap-vs-flatpak-how-to-decide-which-linux-package-manager-is-right-for-you/",
+        "published": "Mon, 08 Dec 2025 16:07:50 GMT",
+        "source": "Latest news",
+        "summary": "It's a debate Linux users love to argue over, and there's no easy answer - but here's my take."
+    },
+    {
+        "id": "https://www.zdnet.com/article/50-windows-keyboard-shortcuts-every-user-should-know/",
+        "title": "50+ Windows keyboard shortcuts every user should know (and improves productivity)",
+        "link": "https://www.zdnet.com/article/50-windows-keyboard-shortcuts-every-user-should-know/",
+        "published": "Mon, 08 Dec 2025 15:24:00 GMT",
+        "source": "Latest news",
+        "summary": "Keyboard shortcuts can supercharge your workflow - if you know what they are. Here are the ones I recommend to every Windows user."
+    },
+    {
+        "id": "https://earthquake.usgs.gov/earthquakes/map/?currentFeatureId=us6000rtdt&extent=-5.61599,111.26953&extent=70.40735,173.14453",
+        "title": "Tsunami warning issued after 7.6-magnitude earthquake strikes Japan",
+        "link": "https://earthquake.usgs.gov/earthquakes/map/?currentFeatureId=us6000rtdt&extent=-5.61599,111.26953&extent=70.40735,173.14453",
+        "published": "Mon, 08 Dec 2025 15:33:02 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46193413\">Comments</a>"
+    },
+    {
+        "id": "https://www.data.jma.go.jp/multi/quake/quake_detail.html?eventID=20251208232600&lang=en",
+        "title": "7.6 earthquake off the coast of Japan",
+        "link": "https://www.data.jma.go.jp/multi/quake/quake_detail.html?eventID=20251208232600&lang=en",
+        "published": "Mon, 08 Dec 2025 15:05:49 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46193035\">Comments</a>"
+    },
+    {
+        "id": "https://www.artificialintelligence-news.com/news/instacart-pilots-agentic-commerce-by-embedding-in-chatgpt/",
+        "title": "Instacart pilots agentic commerce by embedding in ChatGPT",
+        "link": "https://www.artificialintelligence-news.com/news/instacart-pilots-agentic-commerce-by-embedding-in-chatgpt/",
+        "published": "Mon, 08 Dec 2025 16:09:44 +0000",
+        "source": "AI News",
+        "summary": "<p>Instacart has deployed an embedded checkout experience within ChatGPT through the emerging Agentic Commerce Protocol. With the deployment, the company is the first partner to launch an app on ChatGPT that offers a complete shopping cycle \u2013 from query to payment \u2013 without requiring the user to leave the conversation interface. Operationalising agentic commerce The [&#8230;]</p>\n<p>The post <a href=\"https://www.artificialintelligence-news.com/news/instacart-pilots-agentic-commerce-by-embedding-"
     }
 ]
